src/objects/Goal_Target__c.object
<CustomObject>
    <description>Linked to Goal (Campaign) to record users targets</description>
    <fields>
        <fullName>BST_BAX_Goal_Target_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Target User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goal_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_BAX_Goal__c</fullName>
        <label>Associated Critical Metrics</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Goal Targets</relationshipLabel>
        <relationshipName>Goal_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BST_BAX_Starting_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starting Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X01_January__c</fullName>
        <label>01-January</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X02_February__c</fullName>
        <label>02-February</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X03_March__c</fullName>
        <label>03-March</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X04_April__c</fullName>
        <label>04-April</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X05_May__c</fullName>
        <label>05-May</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X06_June__c</fullName>
        <label>06-June</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X07_July__c</fullName>
        <label>07-July</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X08_August__c</fullName>
        <label>08-August</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X09_September__c</fullName>
        <label>09-September</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X10_October__c</fullName>
        <label>10-October</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X11_November__c</fullName>
        <label>11-November</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_BAX_X12_December__c</fullName>
        <label>12-December</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Goal_Target_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Goal Target P1</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_SUM_Monthly_Targets__c</fullName>
        <formula>BST_BAX_X01_January__c + BST_BAX_X02_February__c + BST_BAX_X03_March__c + BST_BAX_X04_April__c + BST_BAX_X05_May__c + BST_BAX_X06_June__c + BST_BAX_X07_July__c + BST_BAX_X08_August__c + BST_BAX_X09_September__c + BST_BAX_X10_October__c + BST_BAX_X11_November__c + BST_BAX_X12_December__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUM Monthly Targets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Target_Description__c</fullName>
        <label>Target Description</label>
        <type>TextArea</type>
    </fields>
    <label>Goal Target</label>
    <nameField>
        <displayFormat>GT-{00000}</displayFormat>
        <label>BOOST Goal Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>